<resources>
    <string name="app_name">Profile Application</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="profileName">Klein Moretti</string>
    <string name="profileBio">The Fool • Lord of Mysteries</string>
    <string name="followButton">Praise the Fool!</string>
    <string name="emailAddress">lordofthemysteries@backlund.com</string>
    <string name="editProfile">Edit Profile</string>
    <string name="accountSettings">Account Settings</string>
    <string name="personalInfo">Personal Information</string>
    <string name="notifications">Notifications</string>
    <string name="helpAndSupport">Help and Support</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="terms">Terms and Conditions</string>
    <string name="saved">Saved</string>
    <string name="following">Following</string>
    <string name="faqAndHelp">FAQ and Help</string>
    <string name="arrowKey">Continue</string>
    <string name="logoutButton">Logout</string>
    <string name="personalInfoDetail">Klein Moretti is the main protagonist of Lord of Mysteries, and a character of Circle of Inevitability.
        \n\n He is also the mysterious leader of the Tarot Club known as The Fool and a Transmigrator who comes from the modern era.
        \n\n <i>The Fool that doesn\'t belong in this era. \n The Mysterious Ruler above the Gray Fog. \n The king of Yellow and Black who wields good luck. </i>
        \n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t - <i>Honorific Name of <b>The Fool</b></i> </string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="friendRequests">Friend Requests</string>
    <string name="memories">Memories</string>
</resources>