<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profilePicture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:contentDescription="@string/profilePicture"
                android:scaleType="centerCrop"
                android:src="@drawable/klein_moretti"
                app:shapeAppearanceOverlay="@style/circleImageView"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profileName"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/profileBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/profileBio"
                android:textSize="12sp" />

            <Button
                android:id="@+id/buttonAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/midnight_blue"
                android:text="@string/followButton"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/emailAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/emailAddress"
                android:textSize="12sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/accountSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/accountSettings"
                android:textSize="11sp"
                android:textColor="@color/light_gray"/>

            <TextView
                android:id="@+id/personalInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personalInfo"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/timeSpent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeSpent"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/helpAndSupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/helpAndSupport"
                android:textSize="11sp"
                android:textColor="@color/light_gray"/>

            <TextView
                android:id="@+id/privacyPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacyPolicy"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/faq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faqAndHelp"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>