<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profilePicture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="12dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/profilePicture"
                android:src="@drawable/klein_moretti"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circleImageView"/>

            <TextView
                android:id="@+id/profileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/profileName"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profilePicture"/>

            <TextView
                android:id="@+id/profileBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/profileBio"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileName"
                app:layout_constrainedWidth="true"/>

            <TextView
                android:id="@+id/emailAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/emailAddress"
                android:textColor="@color/unknown"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileBio"/>

            <Button
                android:id="@+id/buttonAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/midnight_blue"
                android:text="@string/followButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailAdd"
                android:clickable="true"
                android:focusable="true"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                app:layout_constraintTop_toBottomOf="@id/buttonAction"/>

            <TextView
                android:id="@+id/accountSettingsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/accountSettings"
                android:textColor="@color/bluish"
                android:textSize="11sp"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"/>

            <TextView
                android:id="@+id/personalInformation"
                style="@style/SettingsItemStyle"
                android:text="@string/personalInfo"
                app:drawableEndCompat="@drawable/right_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/accountSettingsLabel"/>

            <TextView
                android:id="@+id/notifications"
                style="@style/SettingsItemStyle"
                android:text="@string/notifications"
                app:drawableEndCompat="@drawable/right_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personalInformation"/>

            <TextView
                android:id="@+id/saved"
                style="@style/SettingsItemStyle"
                android:text="@string/saved"
                app:drawableEndCompat="@drawable/right_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notifications"/>

            <TextView
                android:id="@+id/following"
                style="@style/SettingsItemStyle"
                android:text="@string/following"
                app:drawableEndCompat="@drawable/right_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/saved"/>

            <TextView
                android:id="@+id/helpAndSupportLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/helpAndSupport"
                android:textColor="@color/bluish"
                android:textSize="11sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/following"/>

            <TextView
                android:id="@+id/privacyPolicy"
                style="@style/SettingsItemStyle"
                android:text="@string/privacyPolicy"
                app:drawableEndCompat="@drawable/right_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/helpAndSupportLabel"/>

            <TextView
                android:id="@+id/terms"
                style="@style/SettingsItemStyle"
                android:text="@string/terms"
                app:drawableEndCompat="@drawable/right_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/privacyPolicy"/>

            <TextView
                android:id="@+id/faq"
                style="@style/SettingsItemStyle"
                android:text="@string/faqAndHelp"
                app:drawableEndCompat="@drawable/right_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/terms"
                android:layout_marginBottom="12dp"/>

            <Button
                android:id="@+id/buttonLogout"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/logoutButton"
                android:textColor="@color/destructive"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faq"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>